[metadata]
name = x23113383_loan_management_system
version = 0.0.1
author = user-kranthi123
author_email = kranthikumar.kphb@gmail.com
description = Loan Management System Library 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url=https://github.com/user-kranthi123/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
